# devutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
harness/: CMakeLists.txt
harness/class/: CMakeLists.txt  codegen.sh  emapi_harness.main.cpp  fields_harness.main.cpp  fields_harness.src.hpp
tagwire/: :0  ByteArray.h  CMakeLists.txt  EmapiSessionImpl.cpp  EmapiSessionImpl.h  EmapiTagwireWrapper.cpp  EmapiTagwireWrapper.h  EmapiTypes.h  MessageDataIf.cpp  MessageDataIf.h  MessageTrace.h  ParseException.h  TagwireDecoder.cpp  TagwireDecoder.h  TagwireEncoder.cpp  TagwireEncoder.h  TagwireUtil.h  Transport.cpp  codegen.sh  emapi.cpp  emapi.h  tagwire_harness_main.cpp  thailand_client.c  thailand_client.cpp  thailand_sim.cpp
